--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "prettier": "prettier --write app/*.js app/__{tests,mocks}__/*.js e2e_tests/*.js"
   },
   "dependencies": {
-    "ejs": "~2.5.7",
-    "express": "~4.16.2",
-    "got": "^8.0.1",
-    "serve-favicon": "^2.4.5"
+    "ejs": "^2.5.9",
+    "express": "^4.16.4",
+    "got": "^8.3.2",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "eslint": "^4.12.1",
+    "eslint": "^4.19.1",
     "jest": "^21.2.1",
-    "nodemon": "^1.12.5",
-    "prettier": "^1.9.1",
+    "nodemon": "^1.19.4",
+    "prettier": "^1.19.1",
     "supertest": "~3.0.0"
   },
   "repository": {
