--- a/package.json
+++ b/package.json
@@ -16,10 +16,18 @@
     "prettier": "prettier --write app/*.js app/__{tests,mocks}__/*.js e2e_tests/*.js"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^1.4.1",
+    "@google-cloud/storage": "^4.3.0",
+    "dotenv": "^8.2.0",
     "ejs": "^2.5.9",
     "express": "^4.16.4",
     "got": "^8.3.2",
-    "serve-favicon": "^2.5.0"
+    "jszip": "^3.2.2",
+    "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
+    "request": "^2.88.0",
+    "serve-favicon": "^2.5.0",
+    "zip-stream": "^2.1.3"
   },
   "devDependencies": {
     "coveralls": "^3.0.9",
